--- a/crates/xlex-mcp/Cargo.toml
+++ b/crates/xlex-mcp/Cargo.toml
@@ -3,7 +3,7 @@ name = "xlex-mcp"
 description = "MCP server for xlex Excel manipulation"
 version.workspace = true
 edition.workspace = true
-rust-version.workspace = true
+rust-version = "1.85"  # rmcp requires edition 2024 (Rust 1.85+)
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
