--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,9 @@ categories = ["command-line-utilities", "parser-implementations"]
 
 [workspace.dependencies]
 # Core dependencies
-zip = "2.2"  # Updated for MSRV 1.80 compatibility
+zip = "2.4"  # 2.4.x, non-yanked, MSRV 1.73
 quick-xml = "0.36"
-time = ">=0.3.20, <0.3.37"  # Pin to avoid edition2024 requirement (MSRV 1.80)
-crc = "3.2"  # MSRV guard: newer releases require Rust 1.83+
-indexmap = "2.2"  # MSRV guard: 2.13+ requires Rust 1.82+
-pest = "2.7"  # MSRV guard: 2.8+ requires Rust 1.83+
-pest_derive = "2.7"
-pest_generator = "2.7"
-pest_meta = "2.7"
+time = ">=0.3.37, <0.3.42"  # Pin: 0.3.42+ requires Rust 1.81+, 0.3.47+ (vuln fix) requires 1.88+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
@@ -48,12 +42,12 @@ tokio = { version = "1.0", features = ["full"] }
 # Utils
 thiserror = "1.0"
 anyhow = "1.0"
-lru = "0.12"
+lru = "0.16"  # Fix RUSTSEC-2026-0002 unsoundness
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
 regex = "1.10"
 regex-lite = "0.1"
-handlebars = "4.5"  # 5.0+ requires pest 2.8+ which needs Rust 1.83
+handlebars = "4.5"  # MSRV guard: 5.0+ requires pest 2.8+ which needs Rust 1.83+
 csv = "1.3"
 dirs = "5.0"
 memmap2 = "0.9"
